Bug 460451 - Apply button is inactive after selecting custom icon again
Summary: Apply button is inactive after selecting custom icon again
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-14 20:59 UTC by ratijas
Modified: 2025-10-17 20:48 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-10-14 20:59:37 UTC
SUMMARY

The «Apply» button on the General page of Application Launcher Settings may become inappropriately disabled.

STEPS TO REPRODUCE
1. Open widget settings.
2. Select some custom icon. Apply.
3. Reset to default icon or Remove icon. Apply.
2. Select the same custom icon.

OBSERVED RESULT
Apply button is disabled. Can be re-enabled by selecting some other custom icon, or re-opening the settings.

EXPECTED RESULT
Apply button should be enabled always when changing from "no icon" or "default icon" state to a "custom icon".

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE: git-master
Qt Version: 5.15.6
Kernel Version: 5.19.13-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: G752VT
System Version: 1.0
Comment 1 ratijas 2022-10-14 22:22:20 UTC
This requires a patch to KDeclarative framework, adding at least accepted() and rejected signals to KQuickAddons.IconDialog — KIconDialog's QML wrapper.
Comment 2 Nate Graham 2023-12-08 22:59:13 UTC
Can still reproduce in Plasma 6.
Comment 3 Marco Martin 2023-12-11 14:58:55 UTC
can't reproduce here on today's master
Comment 4 Marco Martin 2023-12-11 15:01:55 UTC
(In reply to Marco Martin from comment #3)
> can't reproduce here on today's master
nevermind i can reproduce
Comment 5 Bug Janitor Service 2025-10-14 14:40:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/193
Comment 6 Niccolò Venerandi 2025-10-15 18:50:08 UTC
Git commit 4a232de9e5a21a108c0ef5c9f845ed79d510f615 by Niccolò Venerandi.
Committed on 14/10/2025 at 14:40.
Pushed by niccolove into branch 'master'.

Avoid saving state between multiple usages of IconDialog

If you select an icon, close the dialog, open it again, and
select the same icon, there won't be any signal of a new icon
being selected because the dialog saves the state from the
previous usage.
The user cannot avoid this behavior as the iconName is
readonly, so it can only be re-set by the IconDialog itself.

M  +4    -0    src/qml/icondialog.cpp

https://invent.kde.org/frameworks/kiconthemes/-/commit/4a232de9e5a21a108c0ef5c9f845ed79d510f615